k8s-deploymnt/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-voting-prefixes
spec:
  stripPrefix:
    prefixes:
      - /vote
      - /result
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: force-vote-prefix
spec:
  redirectRegex:
    regex: "^(https?://[^/]+)/(.*)"
    replacement: "${1}/vote/${2}"

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: force-result-prefix
spec:
  redirectRegex:
    regex: "^(https?://[^/]+)/(.*)"
    replacement: "${1}/result/${2}"

---
# kind: Ingress
# metadata:
#   name: voting-ingress
#   annotations:
#     traefik.ingress.kubernetes.io/router.middlewares: voting-strip-voting-prefixes@kubernetescrd
# spec:
#   ingressClassName: traefik
#   rules:
#     - http:
#         paths:
#           - path: /vote
#             pathType: Prefix
#             backend:
#               service:
#                 name: vote-service
#                 port:
#                   number: 8080
#           - path: /result
#             pathType: Prefix
#             backend:
#               service:
#                 name: result-service
#                 port:
#                   number: 8081
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: voting-ingressroute
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/socket.io`)
      kind: Rule
      services:
        - name: result-service
          port: 8081
          sticky:
            cookie:
              name: socketio_sticky_session
              httpOnly: true

    - match: PathPrefix(`/vote`)
      kind: Rule
      services:
        - name: vote-service
          port: 8080
          sticky:
            cookie:
              name: voter_id
      middlewares:
        - name: strip-voting-prefixes

    - match: HeadersRegexp(`Referer`, `.*/vote.*`) && !PathPrefix(`/vote`) && !PathPrefix(`/result`) && !PathPrefix(`/socket.io`)
      kind: Rule
      services:
        - name: vote-service
          port: 8080
      middlewares:
        - name: force-vote-prefix

    - match: PathPrefix(`/result`)
      kind: Rule
      services:
        - name: result-service
          port: 8081
          sticky:
            cookie:
              name: socketio_sticky_session
              httpOnly: true
      middlewares:
        - name: strip-voting-prefixes

    - match: HeadersRegexp(`Referer`, `.*/result.*`) && !PathPrefix(`/vote`) && !PathPrefix(`/result`) && !PathPrefix(`/socket.io`)
      kind: Rule
      services:
        - name: result-service
          port: 8081
      middlewares:
        - name: force-result-prefix
